--- a/index.html
+++ b/index.html
@@ -21,16 +21,18 @@
     <header class="title-section">
       <a class="title-h1 no-decoration" href="/">Tip Roulette</a>
       <nav class="header-nav">
-        <button class="header-nav-button button-configuration no-mobile-button">
-          <img src="svg/configuration.svg" alt="configuration button" />
+        <button class="header-nav-button button-configuration no-mobile-button" title="Configuration">
+          <img src="svg/configuration.svg" alt="Configuration button" />
         </button>
-        <button class="header-nav-button button-help no-mobile-button">
+        <button class="header-nav-button button-help no-mobile-button" title="Help">
           <img src="svg/help.svg" alt="help button" />
         </button>
-        <button class="header-nav-button button-box no-mobile-button">
+        <button class="header-nav-button button-box no-mobile-button" title="Boxes">
+          <span class="counter-boxes">0</span>
           <img src="svg/box.svg" alt="box button" />
         </button>
         <button class="header-nav-button mobile-menu">
+          
           <img src="svg/mobile-menu.svg" alt="mobile menu" />
         </button>
       </nav>
@@ -46,6 +48,7 @@
       </button>
       <button class="header-nav-button button-box mobile-button">
         <span>Boxes</span>
+        <span class="counter-boxes-mobile">0</span>
         <img src="svg/box.svg" alt="box button" />
       </button>
     </aside>
@@ -91,6 +94,7 @@
         }
       </style>
       <script>
+        const counterBoxesElement = document.querySelector(".counter-boxes");
         const rouletteElement = document.querySelector(".roulette");
         const boxElements = document.querySelectorAll(".box-roulette");
         const spinButton = document.querySelector("#spin-btn");
@@ -98,11 +102,11 @@
         const buttonMenuMobile = document.querySelector(".mobile-menu");
         const menuMobile = document.querySelector(".phone-navigation-menu");
         const dataStyle_1 = styleHoverBox.innerHTML;
-
         buttonMenuMobile.addEventListener("click", () => {
           menuMobile.classList.toggle("visible-menu");
           document.documentElement.classList.toggle("no-overflowY");
         });
+        let counterBox = 0;
         const timeAnimation = 25;
         let fpp = 0.5;
         let boxChosen;
@@ -134,10 +138,15 @@
               clearInterval(animationSpin);
               styleHoverBox.innerHTML = dataStyle_1;
               console.log(styleHoverBox.innerHTML);
+              if (counterBox === 0) {
+                counterBoxesElement.style.backgroundColor = "var(--boxes-color)";
+              }
+              counterBox++;
+              counterBoxesElement.innerText = counterBox;
+              
               const reverseAnimation = setInterval(() => {
                 percentComplete -= fpp;
                 rouletteElement.style.backgroundImage = `linear-gradient(90deg, #333 ${percentComplete}%, var(--roulette-color) 0%)`;
-
                 if (percentComplete <= 0) {
                   percentComplete = 0;
                   boxElements.forEach(
