--- a/index.html
+++ b/index.html
@@ -21,18 +21,26 @@
     <header class="title-section">
       <a class="title-h1 no-decoration" href="/">Tip Roulette</a>
       <nav class="header-nav">
-        <button class="header-nav-button button-configuration no-mobile-button" title="Configuration">
+        <button
+          class="header-nav-button button-configuration no-mobile-button"
+          title="Configuration"
+        >
           <img src="svg/configuration.svg" alt="Configuration button" />
         </button>
-        <button class="header-nav-button button-help no-mobile-button" title="Help">
+        <button
+          class="header-nav-button button-help no-mobile-button"
+          title="Help"
+        >
           <img src="svg/help.svg" alt="help button" />
         </button>
-        <button class="header-nav-button button-box no-mobile-button" title="Boxes">
+        <button
+          class="header-nav-button button-box no-mobile-button"
+          title="Boxes"
+        >
           <span class="counter-boxes">0</span>
           <img src="svg/box.svg" alt="box button" />
         </button>
         <button class="header-nav-button mobile-menu">
-          
           <img src="svg/mobile-menu.svg" alt="mobile menu" />
         </button>
       </nav>
@@ -95,17 +103,29 @@
       </style>
       <script>
         const counterBoxesElement = document.querySelector(".counter-boxes");
+        const cnterBxMobileElement = document.querySelector(
+          ".counter-boxes-mobile"
+        );
         const rouletteElement = document.querySelector(".roulette");
         const boxElements = document.querySelectorAll(".box-roulette");
         const spinButton = document.querySelector("#spin-btn");
         const styleHoverBox = document.querySelector("#style-hover-box");
         const buttonMenuMobile = document.querySelector(".mobile-menu");
         const menuMobile = document.querySelector(".phone-navigation-menu");
+        const htmlElement = document.documentElement;
         const dataStyle_1 = styleHoverBox.innerHTML;
         buttonMenuMobile.addEventListener("click", () => {
           menuMobile.classList.toggle("visible-menu");
-          document.documentElement.classList.toggle("no-overflowY");
+          htmlElement.classList.toggle("no-overflowY");
         });
+        const mediaQuery750 = window.matchMedia("(min-width: 750px)");
+        mediaQuery750.addEventListener("change", (e) => {
+          if (e.matches) {
+            menuMobile.classList.remove("visible-menu");
+            htmlElement.classList.remove("no-overflowY");
+          }
+        });
+
         let counterBox = 0;
         const timeAnimation = 25;
         let fpp = 0.5;
@@ -139,11 +159,14 @@
               styleHoverBox.innerHTML = dataStyle_1;
               console.log(styleHoverBox.innerHTML);
               if (counterBox === 0) {
-                counterBoxesElement.style.backgroundColor = "var(--boxes-color)";
+                counterBoxesElement.style.backgroundColor =
+                  "var(--boxes-color)";
+                cnterBxMobileElement.style.backgroundColor =
+                  "var(--boxes-color)";
               }
               counterBox++;
               counterBoxesElement.innerText = counterBox;
-              
+              cnterBxMobileElement.innerHTML = counterBox;
               const reverseAnimation = setInterval(() => {
                 percentComplete -= fpp;
                 rouletteElement.style.backgroundImage = `linear-gradient(90deg, #333 ${percentComplete}%, var(--roulette-color) 0%)`;
