--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <img src="svg/box.svg" alt="box button" />
         </button>
         <button class="header-nav-button mobile-menu">
+          <span class="counter-boxes-mobile-menu">0</span>
           <img src="svg/mobile-menu.svg" alt="mobile menu" />
         </button>
       </nav>
@@ -101,87 +102,7 @@
           visibility: visible;
         }
       </style>
-      <script>
-        const counterBoxesElement = document.querySelector(".counter-boxes");
-        const cnterBxMobileElement = document.querySelector(
-          ".counter-boxes-mobile"
-        );
-        const rouletteElement = document.querySelector(".roulette");
-        const boxElements = document.querySelectorAll(".box-roulette");
-        const spinButton = document.querySelector("#spin-btn");
-        const styleHoverBox = document.querySelector("#style-hover-box");
-        const buttonMenuMobile = document.querySelector(".mobile-menu");
-        const menuMobile = document.querySelector(".phone-navigation-menu");
-        const htmlElement = document.documentElement;
-        const dataStyle_1 = styleHoverBox.innerHTML;
-        buttonMenuMobile.addEventListener("click", () => {
-          menuMobile.classList.toggle("visible-menu");
-          htmlElement.classList.toggle("no-overflowY");
-        });
-        const mediaQuery750 = window.matchMedia("(min-width: 750px)");
-        mediaQuery750.addEventListener("change", (e) => {
-          if (e.matches) {
-            menuMobile.classList.remove("visible-menu");
-            htmlElement.classList.remove("no-overflowY");
-          }
-        });
-
-        let counterBox = 0;
-        const timeAnimation = 25;
-        let fpp = 0.5;
-        let boxChosen;
-        let percentComplete = 0;
-
-        function randBox(number) {
-          return Math.floor(Math.random() * number);
-        }
-
-        spinButton.addEventListener("click", () => {
-          styleHoverBox.innerHTML = "";
-          spinButton.style.display = "none";
-          percentComplete = 0;
-
-          const ChooseBox = setInterval(() => {
-            boxElements.forEach(
-              (box) => (box.style.filter = "brightness(30%)")
-            );
-            boxChosen = boxElements[randBox(4)];
-            boxChosen.style.filter = "brightness(100%)";
-          }, 200);
-
-          const animationSpin = setInterval(() => {
-            percentComplete += fpp;
-            rouletteElement.style.backgroundImage = `linear-gradient(90deg, #333 ${percentComplete}%, var(--roulette-color) 0%)`;
-            if (percentComplete >= 100) {
-              spinButton.style.display = "flex";
-              clearInterval(ChooseBox);
-              clearInterval(animationSpin);
-              styleHoverBox.innerHTML = dataStyle_1;
-              console.log(styleHoverBox.innerHTML);
-              if (counterBox === 0) {
-                counterBoxesElement.style.backgroundColor =
-                  "var(--boxes-color)";
-                cnterBxMobileElement.style.backgroundColor =
-                  "var(--boxes-color)";
-              }
-              counterBox++;
-              counterBoxesElement.innerText = counterBox;
-              cnterBxMobileElement.innerHTML = counterBox;
-              const reverseAnimation = setInterval(() => {
-                percentComplete -= fpp;
-                rouletteElement.style.backgroundImage = `linear-gradient(90deg, #333 ${percentComplete}%, var(--roulette-color) 0%)`;
-                if (percentComplete <= 0) {
-                  percentComplete = 0;
-                  boxElements.forEach(
-                    (box) => (box.style.filter = "brightness(70%)")
-                  );
-                  clearInterval(reverseAnimation);
-                }
-              }, timeAnimation / 2);
-            }
-          }, timeAnimation);
-        });
-      </script>
+      <script src="index.js"></script>
     </main>
   </body>
 </html>
