--- a/index.html
+++ b/index.html
@@ -61,11 +61,17 @@
         <img src="svg/box.svg" alt="box button" />
       </button>
     </aside>
+    <aside class="box-menu">
+      <div class="no-box-message">
+        <span>There are no boxes to open yet!</span>
+      </div>
+      </aside>
     <main>
       <aside class="info-box">
         <p class="info-box-title">MUSIC</p>
         <img src="svg/music.svg" alt="" />
       </aside>
+      
       <section class="roulette-section" id="main-roulette">
         <button id="spin-btn">SPIN!</button>
         <div class="roulette">
