Adding box menu to mobile version

--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
         <img src="svg/box.svg" alt="box button" />
       </button>
     </aside>
-    <aside class="box-menu">
+    <aside class="box-menu computer-version-box-menu">
       <div class="no-box-message">
         <span>There are no boxes to open yet!</span>
       </div>
-      </aside>
+    </aside>
     <main>
       <aside class="info-box">
         <p class="info-box-title">MUSIC</p>
         <img src="svg/music.svg" alt="" />
       </aside>
-      
+
       <section class="roulette-section" id="main-roulette">
         <button id="spin-btn">SPIN!</button>
         <div class="roulette">
